@@ -1,0 +1,6 @@
+#include "FWCore/PluginManager/interface/ModuleDef.h"
+#include "FWCore/Framework/interface/MakerMacros.h"
+#include "EventFilter/Playback/interface/PlaybackRawDataProvider.h"
+
+DEFINE_SEAL_MODULE();
+DEFINE_ANOTHER_FWK_MODULE(PlaybackRawDataProvider);
